Afficher les annonces, afficher les catégories, ajouter une catégorie

--- a/template/home.twig
+++ b/template/home.twig
@@ -10,7 +10,7 @@
 
 <!-- Header -->
         <section class="jumbotron my-4">
-            <h1 class="display-3">Accueil</h1>
+            <h1 class="display-3">Accueil {{message}}</h1>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <br>            
             <a href="index.php?action=afficherAnnoncesNouveautes&param=1&paramLibelle=Nouveautés" class="btn btn-primary btn-lg">Voir les nouveautés</a>
