--- a/template/login.twig
+++ b/template/login.twig
@@ -24,7 +24,8 @@
                             <p class="d-block text-center" id="error-connexion"> {{ message != '' ? message : '' }} </p>
 
                             <button class="btn btn-lg btn-primary btn-block" type="submit">Connexion</button>
-                            <!--<a class="d-block text-center mt-2 " href="index.php?url=register">S'inscrire</a>-->
+                            <h4>Pas encore de compte ? Alors inscrivez vous :</h4>
+                            <a class="d-block text-center mt-2 " href="index.php?url=register">S'inscrire</a>
                         </form>
                     </div>
                 </div>
