--- a/template/account.twig
+++ b/template/account.twig
@@ -9,13 +9,13 @@
   <!-- Page Heading -->
   	<div class="row">
  
-		<h1 class="my-4 col-md-4">Bienvenue {{session.utilisateur.prenom_utilisateur}} !</h1>
+		<h1 class="my-4 col-md-4">Bienvenue {{session.firstName}} !</h1>
 
 		<div class="col-md-4">
 		</div>
 
 		<div class="col-md-4">
-		<a class="btn btn-danger" id="btn-ajouter-annonce" href="index.php?action=formAjouterAnnonce" style="visibility:{{ session.utilisateur.id_utilisateur != '' ? 'visible' : 'hidden' }}">Ajouter une annonce</a>
+		<a class="btn btn-danger" id="btn-ajouter-annonce" href="index.php?action=formAjouterAnnonce" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}">Ajouter une annonce</a>
 	    </div>
     </div>
 </div>
@@ -25,9 +25,9 @@
         <div class="col-lg-3">
             <div class="list-group">
             	<h4 class="list-group-item active"> Informations</h4>
-                <p class="list-group-item"><b>Nom : </b> {{session.utilisateur.nom_utilisateur}} </p>
-                <p class="list-group-item"><b>Prénom : </b>  {{session.utilisateur.prenom_utilisateur}} </p>
-                <p class="list-group-item"><b>Email : </b>  {{session.utilisateur.mail_utilisateur}} </p>
+                <p class="list-group-item"><b>Nom : </b> {{session.lastName}} </p>
+                <p class="list-group-item"><b>Prénom : </b>  {{session.firstName}} </p>
+                <p class="list-group-item"><b>Email : </b>  {{session.email}} </p>
             </div>
         </div>
 
@@ -36,20 +36,20 @@
         <!-- /.col-lg-3 -->
             
             <div class="row">
-                {% for a in annonce %}
+                {% for p in product %}
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card h-100">
-                            <a href="?action=afficherUneAnnonce&paramEnTete={{a.entete}}&paramCorps={{a.corps}}&paramIdAnnonce={{a.id}}">
+                            <a href="?action=afficherUneAnnonce&paramEnTete={{p.name}}&paramCorps={{p.description}}&paramIdAnnonce={{p.id}}">
                                 <img class="card-img-top" src="public/images/article1.jpg" alt="">
                             </a>
                             <div class="card-body">
                                 <h4 class="card-title">
-                                    <a href="?action=afficherUneAnnonce&paramEnTete={{a.entete}}&paramCorps={{a.corps}}&paramIdAnnonce={{a.id}}">{{a.entete}}</a>
+                                    <a href="?action=afficherUneAnnonce&paramEnTete={{p.name}}&paramCorps={{p.description}}&paramIdAnnonce={{p.id}}">{{p.name}}</a>
                                 </h4>
-                                <h5>100.00 €</h5>
-                                <p class="card-text">{{a.corps}}</p>
-                                <a class="btn btn-danger" href="index.php?action=formModifierAnnonce&param={{a.id}}&entete={{a.entete}}" style="visibility:{{ session.utilisateur.id_utilisateur != '' ? 'visible' : 'hidden' }}">Modifier</a>
-                                <a class="btn btn-danger" href="index.php?action=supprimerAnnonce&param={{a.id}}" style="visibility:{{ session.utilisateur.id_utilisateur != '' ? 'visible' : 'hidden' }}">Supprimer</a>
+                                <h5>{{p.price}}</h5>
+                                <p class="card-text">{{p.description}}</p>
+                                <a class="btn btn-danger" href="index.php?action=formModifierAnnonce&param={{p.id}}&entete={{p.name}}" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}">Modifier</a>
+                                <a class="btn btn-danger" href="index.php?action=supprimerAnnonce&param={{p.id}}" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}">Supprimer</a>
                             </div>
                         </div>
                     </div>
