--- a/template/layout.twig
+++ b/template/layout.twig
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     	{% block title %}{% endblock %}
-    	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    	<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
         <link href="public/css/bootstrap.min.css" rel="stylesheet">
         <link href="public/css/style.css" rel="stylesheet">
     </head>
@@ -30,11 +30,12 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Annonces</a>
+                      <a class="nav-link" href="index.php?url=products">Annonces</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Catégories</a></a>
+                      <a class="nav-link" href="index.php?url=categories">Catégories</a></a>
                     </li>
+                    {#
                     <li class="nav-item">
                       <a class="nav-link" href="index.php?url=login">Connexion</a>
                     </li>
@@ -47,9 +48,28 @@
                     <li class="nav-item">
                       <a class="nav-link" href="index.php?url=logout">Déconnexion</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="index.php?url=debug">Debug</a>
-                    </li>
+                    #}
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.php?url=debug">Debug</a>
+                  </li>
+                  
+                  <li class="nav-item">
+                      <a class="nav-link" href={{session.id != '' ? 'index.php?url=logout' : 'index.php?url=login'}}>
+                          {{session.id != '' ? 'Deconnexion' : 'Se connecter'}}
+                      </a>
+                  </li>
+                  
+                  <li class="nav-item">
+                      <a class="nav-link" href="index.php?url=account" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}">
+                          Mon compte
+                      </a>
+                  </li>
+                  
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.php?url=debugCat">Debug cat</a>
+                  </li>
+                    
+                   
                   </ul>
                   <form class="d-flex">
                     <input class="form-control me-sm-2" type="text" placeholder="Rechercher...">
