--- a/template/addCategoryForm.twig
+++ b/template/addCategoryForm.twig
@@ -13,7 +13,7 @@
             </div>
             <div class="card-body">
                 <h5 class="card-title text-center">Ajouter une catégorie</h5>
-                <form class="form-signin" method="post" action="index.php?url=insertCategory">
+                <form class="form-signin" method="post" action="index.php?url=insertCategory" enctype="multipart/form-data">
                 <div class="form-label-group">
                     <label for="name">Nom</label>
                     <input type="text" id="name" name="name" class="form-control" placeholder="Nom de la catégorie" required autofocus>
@@ -26,7 +26,7 @@
 
                 <div class="form-label-group">
                     <label for="image">Image</label>
-                    <input type="text" id="image" name="image" class="form-control" placeholder="Url de l'image souhaitée" required>
+                    <input type="file" id="image" name="image" class="form-control" placeholder="Image souhaitée" required>
                 </div>
 
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Valider</button>
