panel admin + fonctions admin

--- a/template/account.twig
+++ b/template/account.twig
@@ -28,8 +28,8 @@
             </div>
         </div>
         <div class="col-md-4">
-		<a class="btn btn-primary" id="updateAccount" href="index.php?url=updateAccount">Modifier mes informations personnelles</a>
-		<a class="btn btn-danger" id="updateAccount" href="index.php?url=deleteAccount">Supprimer mon compte</a>
+		<a class="btn btn-primary" id="updateAccount" href="index.php?url=updateMyAccount">Modifier mes informations personnelles</a>
+		<a class="btn btn-danger" id="updateAccount" href="index.php?url=deleteMyAccount">Supprimer mon compte</a>
 	    </div>
 	    <div class="col-md-4">
 	    <a class="btn btn-primary" id="btn-ajouter-rubrique" href="index.php?url=addCategory" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}">Ajouter une catégorie</a>
