--- a/template/home.twig
+++ b/template/home.twig
@@ -10,7 +10,7 @@
 
 <!-- Header -->
         <section class="jumbotron my-4">
-            <h1 class="display-3">Accueil {{message}}</h1>
+            <h1 class="display-3">Accueil</h1>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <br>            
             <a href="index.php?url=newProducts&paramName=Nouveautés" class="btn btn-primary btn-lg">Voir les nouveautés</a>
@@ -43,9 +43,9 @@
         
         <section>
             <nav class="socialmedia text-center" id="socialmedia">
-                <a href="#" target="_blank"> <img src="public/image/facebook.png" alt="facebook"></a> 
-                <a href="#" target="_blank"> <img src="public/image/insta.png" alt="Instagram"></a>
-                <a href="#" target="_blank"> <img src="public/image/twitter.png" alt="twitter"></a>
+                <a href="#" target="_blank"> <img src="public/img/facebook.png" alt="facebook"></a> 
+                <a href="#" target="_blank"> <img src="public/img/insta.png" alt="Instagram"></a>
+                <a href="#" target="_blank"> <img src="public/img/twitter.png" alt="twitter"></a>
             </nav>
         </section>
     </div>
