--- a/template/layout.twig
+++ b/template/layout.twig
@@ -8,9 +8,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     	{% block title %}{% endblock %}
-    	<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
+
+        {% block stylesheets %}
+            	<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
         <link href="public/css/bootstrap.min.css" rel="stylesheet">
         <link href="public/css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        {% endblock %}
+        
     </head>
     
     <body>
@@ -26,29 +31,16 @@
                   <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                       <a class="nav-link active" href="index.php?url=home">Accueil
-                        <span class="visually-hidden">(current)</span>
+                        <span class="visually-hidden"></span>
                       </a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="index.php?url=categories">Catégories</a></a>
                     </li>
                     {#
-                    <li class="nav-item">
-                      <a class="nav-link" href="index.php?url=login">Connexion</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="index.php?url=register">Inscription</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="index.php?url=account">Mon compte</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="index.php?url=logout">Déconnexion</a>
-                    </li>
-                    #}
                   <li class="nav-item">
                     <a class="nav-link" href="index.php?url=debug">Debug</a>
-                  </li>
+                  </li>#}
                   
                   <li class="nav-item">
                       <a class="nav-link" href={{session.id != '' ? 'index.php?url=logout' : 'index.php?url=login'}}>
@@ -70,7 +62,7 @@
               </div>
             </nav>
             
-            {#<nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <div class="col-md-2">
                 </div>
@@ -78,13 +70,13 @@
                 <div class="collapse navbar-collapse col-md-8" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a  class="nav-link active" href="index.php?action=afficherAnnoncesNouveautes&param=1&paramLibelle=Nouveautés">NOUVEAUTES</a>
+                            <a  class="nav-link active" href="index.php?url=newProducts&paramName=Nouveautés">NOUVEAUTES</a>
                         </li>
 
                     {% for category in categories %}
 
                         <li class="nav-item">   
-                            <a  class="nav-link" href="index.php?url=displayProductsByCategory&id={{category.id}}&name={{category.name}}">
+                            <a  class="nav-link" href="index.php?url=products&id={{category.id}}&paramName={{category.name}}">
                                 {{category.name|upper}}
                             </a>
                         </li>
@@ -95,7 +87,7 @@
                 <div class="col-md-2">
                 </div>
             </div>
-        </nav>#}
+        </nav>
 
 
         </header>
