--- a/template/adminCategories.twig
+++ b/template/adminCategories.twig
@@ -19,7 +19,7 @@
 	        	{% for category in categories %}
 	            <tr>
 	                <td class="people">
-	                    <img src="./public/img/categories/{{category.url_picture}}" alt="Image de {{category.name}}">
+	                    <img src="./public/img/categories/{{category.url_picture}}" alt="{{category.name}}">
 	                    <div class="name">
 	                        <h5>{{category.name}}</h5>
 	                        <p>{{category.id}}</p>
